added first section

--- a/index.html
+++ b/index.html
@@ -43,8 +43,14 @@
             </div>
         </header>
         <!-- პირველი სექცია დაიწყო -->
-        <section>
-            
+        <section class="first-section">
+            <img src="./images/image.png" alt="">
+            <div class="adventures">
+                <h4>WKND Adventures</h4>
+                <p>Join us on one of our next adventures. Browse our list of curated experiences and sign up for one when you’re ready to explore with us.</p>
+                <button>View adVentures</button>
+            </div>
+
         </section>
 
     </div>
