--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/font.css">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     
     <link rel="stylesheet" href="./css/style.css">
@@ -159,6 +160,39 @@
             </div>
 
         </section>
+        <!-- ფუტერი იწყება -->
+        <footer>
+            <div class="footer-header">
+                <div class="footer-logo">WKND</div>
+                <nav>
+                    <ul>
+                        <li>MAGAZINE</li>
+                        <li>ADVENTURES</li>
+                        <li>FAQ</li>
+                        <li>About us</li>
+                    </ul>
+                </nav>
+                <div class="icons">
+                    <div>
+                        <a href="https://www.instagram.com/">
+                            <img src="./images/insta.png" alt="instagram">
+                        </a>   
+                    </div>
+                    <div>
+                        <a href="https://www.facebook.com/">
+                            <img src="./images/face.png" alt="facebook">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://twitter.com/?lang=en">
+                            <img src="./images/twitter.png" alt="twitter">
+                        </a>
+                        
+                    </div>
+                </div>
+            </div>
+            <p class="copyright">&copy 2019, WKND Demo Site. Intended only as a demonstration of Adobe Experience Manager</p>
+        </footer>
 
     </div>
     <script src="./main.js"></script>
