added some hovers

--- a/index.html
+++ b/index.html
@@ -21,12 +21,8 @@
                     <p>ACCOUNT</p>
                 </div>
             </div>
-            <!-- დამალული ფორმა -->
-            <form class="sign">
-                <input type="text" name="name" id="name" placeholder="your name" class="name">
-                <input type="password" name="password" id="password" placeholder="enter password" class="password">
-                <button class="signIn">sign in</button>      
-            </form>
+            
+
             <div class="white-header">
                 <div class="logo">WKND</div>
                 <nav>
@@ -47,6 +43,16 @@
         <!-- პირველი სექცია დაიწყო -->
         <section class="first-section">
             <img src="./images/image.png" alt="">
+            <!-- დამალული ფორმა -->
+            <!-- <div class="hidden-form"> -->
+                <form class="sign">
+                    <input type="text" name="name" id="name" placeholder="your name" class="name">
+                    <input type="password" name="password" id="password" placeholder="enter password" class="password">
+                    <button class="signIn">sign in</button>      
+                </form>
+            <!-- </div> -->
+                
+
             <div class="adventures">
                 <h4>WKND Adventures</h4>
                 <p>Join us on one of our next adventures. Browse our list of curated experiences and sign up for one when you’re ready to explore with us.</p>
